update/fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: scala
 scala:
   - 2.12.8
 
-addons:
-  postgresql: "10"
+services:
+  - postgresql
 
 script: sbt scripted
+
+cache:
+  directories:
+    - $HOME/.ivy2/cache/
+    - $HOME/.sbt/boot/
